fixed overflow

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -56,28 +56,36 @@
 .advantages__list {
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: stretch;
   flex-wrap: wrap;
   row-gap: 30px;
+  column-gap: 40px;
   padding-inline-start: 0;
   margin-block-start: 0;
   margin-block-end: 0;
+
+  @include vp-1023 {
+    column-gap: 30px;
+  }
 }
 
 .advantages__item {
-  width: 31%;
+  max-width: 360px;
+  min-width: 206px;
   height: auto;
   padding: 30px 30px 25px;
   background-color: $color-alice-blue;
   list-style-type: none;
 
   @include vp-1023 {
+    max-width: 206px;
     padding: 25px 16px 25px 20px;
   }
 
   @include vp-767 {
     width: 100%;
+    max-width: none;
     padding-bottom: 20px;
   }
 }
