--- a/source/sass/blocks/journey.scss
+++ b/source/sass/blocks/journey.scss
@@ -16,7 +16,7 @@
 .journey__wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 
   @include vp-1023 {
     row-gap: 40px;
@@ -31,6 +31,7 @@
 }
 
 .journey__content {
+  margin-top: 56px;
   margin-right: 20px;
   padding-right: 50px;
   width: 50%;
@@ -38,6 +39,7 @@
   color: $color-tangaroa;
 
   @include vp-1023 {
+    margin-top: 0;
     margin-right: 30px;
     padding-right: 0;
   }
